--- a/index.html
+++ b/index.html
@@ -18,33 +18,39 @@
             <h1 class="w-11/12 text-3xl md:text-4xl lg:text-5xl font-bold bg-black bg-opacity-70 p-4 rounded-lg">5
                 Wisata
                 Terpopuler di Probolinggo</h1>
-            <div class="grid w-[95%] grid-cols-5 gap-3 mt-6 max-w-lg">
+            <div class="grid grid-cols-2 gap-5 mt-6 md:grid-cols-3 md:grid-rows-2 lg:grid-cols-6 lg:grid-rows-1 lg:gap-5">
                 <a href="#wisata1" class="text-center text-white hover:text-yellow-300">
                     <img src="images/bromo.jpeg" alt="Gunung Bromo"
-                        class="w-24 h-16 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
                     <p class="mt-2 text-sm font-semibold">Bromo</p>
                 </a>
                 <a href="#wisata2" class="text-center text-white hover:text-yellow-300">
                     <img src="images/madakaripura.jpg" alt="Air Terjun Madakaripura"
-                        class="w-24 h-16 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
                     <p class="mt-2 text-sm font-semibold">Madakaripura</p>
                 </a>
                 <a href="#wisata3" class="text-center text-white hover:text-yellow-300">
                     <img src="images/taman_hidup.jpeg" alt="Taman Hidup"
-                        class="w-24 h-16 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
                     <p class="mt-2 text-sm font-semibold">Taman Hidup</p>
                 </a>
                 <a href="#wisata4" class="text-center text-white hover:text-yellow-300">
                     <img src="images/gili.jpeg" alt="Pulau Gili Ketapang"
-                        class="w-24 h-16 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
                     <p class="mt-2 text-sm font-semibold">Gili Ketapang</p>
                 </a>
                 <a href="#wisata5" class="text-center text-white hover:text-yellow-300">
                     <img src="images/bjbr.jpg" alt="BJBR"
-                        class="w-24 h-16 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
                     <p class="mt-2 text-sm font-semibold">BJBR</p>
                 </a>
+                <a href="#wisata6" class="text-center text-white hover:text-yellow-300">
+                    <img src="images/duta.jpg" alt="BJBR"
+                        class="w-24 h-16 lg:w-28 lg:h-20 rounded-lg mx-auto transition-transform transform hover:scale-105">
+                    <p class="mt-2 text-sm font-semibold">Pantai Duta</p>
+                </a>
             </div>
+
         </div>
     </header>
 
@@ -69,15 +75,20 @@
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
                 <p
                     class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
-                    Gunung Bromo adalah salah satu destinasi wisata yang paling terkenal di Probolinggo dengan pemandangan
-                    matahari terbit yang menakjubkan. Destinasi wisata ini sangat hits di kalangan wisatawan dalam dan luar
-                    negeri, sehingga selalu ramai dipadati pengunjung. Pengunjung dapat mendaki Gunung Bromo untuk melihat
-                    kawahnya dan melihat matahari terbit. Dekat dari Gunung Bromo terdapat padang pasir yang sangat luas. Disini
-                    pengunjung dapat mengendarai mobil off-road dengan bebas, memakai motor trail, berkuda atau bahkan sekedar
+                    Gunung Bromo adalah salah satu destinasi wisata yang paling terkenal di Probolinggo dengan
+                    pemandangan
+                    matahari terbit yang menakjubkan. Destinasi wisata ini sangat hits di kalangan wisatawan dalam dan
+                    luar
+                    negeri, sehingga selalu ramai dipadati pengunjung. Pengunjung dapat mendaki Gunung Bromo untuk
+                    melihat
+                    kawahnya dan melihat matahari terbit. Dekat dari Gunung Bromo terdapat padang pasir yang sangat
+                    luas. Disini
+                    pengunjung dapat mengendarai mobil off-road dengan bebas, memakai motor trail, berkuda atau bahkan
+                    sekedar
                     berfoto-foto.</p>
             </div>
         </section>
-        
+
 
         <section id="wisata2" class="w-full h-auto mx-auto bg-grey-200">
             <div
@@ -87,7 +98,9 @@
                     2. Air Terjun Madakaripura</h2>
                 <img src="images/madakaripura.jpg" alt="Madakaripura"
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
-                <p class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">Air terjun ini dikenal
+                <p
+                    class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
+                    Air terjun ini dikenal
                     sebagai
                     air
                     terjun tertinggi di Jawa Timur dengan keindahan
@@ -108,7 +121,9 @@
                     3. Danau Taman Hidup</h2>
                 <img src="images/taman_hidup.jpeg" alt="Gunung Danau Taman Hidup"
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
-                <p class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">Danau Taman
+                <p
+                    class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
+                    Danau Taman
                     Hidup
                     yang
                     berada di kawasan Gunung Argopuro ini menjadi daya tarik
@@ -126,7 +141,9 @@
                     4. Pulau Gili Ketapang</h2>
                 <img src="images/gili.jpeg" alt="Pulau Gili Ketapang"
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
-                <p class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">Gili Ketapang
+                <p
+                    class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
+                    Gili Ketapang
                     merupakan
                     sebuah pulau kecil yang terletak di lepas pantai Probolinggo,
                     Jawa Timur. Pulau ini dikenal dengan pantainya yang berpasir putih dan air laut yang jernih,
@@ -143,8 +160,11 @@
                 <h2
                     class="text-2xl font-bold text-blue-600 mt-6 md:mt-0 md:absolute md:top-4 md:left-1/2 md:-translate-x-1/2 lg:text-3xl lg:top-7">
                     5. BJBR (BeeJay Bakau Resort)</h2>
-                <img src="images/bjbr.jpg" alt="BJBR" class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
-                <p class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">BeeJay Bakau
+                <img src="images/bjbr.jpg" alt="BJBR"
+                    class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
+                <p
+                    class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
+                    BeeJay Bakau
                     Resort
                     (BJBR)
                     adalah tempat wisata dengan konsep ekowisata mangrove yang
