--- a/index.html
+++ b/index.html
@@ -123,14 +123,7 @@
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
                 <p
                     class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
-                    Danau Taman
-                    Hidup
-                    yang
-                    berada di kawasan Gunung Argopuro ini menjadi daya tarik
-                    tersendiri bagi para pendaki jika melakukan trekking ke gunung Argopuro. Selain gunung ini terkenal
-                    dengan jalurnya yang panjang dan dinobatkan sebagai gunung paling panjang jalurnya se-Jawa, tidak
-                    heran Danau Taman Hidup menjadi spot yang wajib dikunjungi bila mendaki Gunung Argopuro dikarenakan
-                    danau ini memiliki pemandangan yang sangat indah.</p>
+                    Danau Taman Hidup, yang terletak di kawasan Gunung Argopuro, menjadi salah satu daya tarik utama bagi para pendaki yang sedang melakukan trekking ke puncak gunung ini. Selain dikenal dengan jalur pendakiannya yang panjang, yang bahkan tercatat sebagai jalur pendakian terpanjang di Jawa, Danau Taman Hidup juga wajib dikunjungi karena keindahan alamnya yang mempesona. Pemandangan sekitar danau yang asri dan segar membuat setiap pendaki merasa terkesima. Keunikan dan ketenangan danau ini menambah pesona Gunung Argopuro sebagai destinasi pendakian yang tak hanya menantang, tetapi juga menenangkan.</p>
             </div>
         </section>
         <section id="wisata4" class="w-full h-auto mx-auto bg-grey-200">
@@ -143,14 +136,7 @@
                     class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
                 <p
                     class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
-                    Gili Ketapang
-                    merupakan
-                    sebuah pulau kecil yang terletak di lepas pantai Probolinggo,
-                    Jawa Timur. Pulau ini dikenal dengan pantainya yang berpasir putih dan air laut yang jernih,
-                    menjadikannya destinasi wisata yang populer bagi para wisatawan lokal maupun mancanegara. Karena air
-                    lautnya yang jernih, Gili Ketapang sangat cocok untuk kegiatan snorkeling. Bahkan para pengunjung
-                    juga bisa menikmati atraksi watersport yang sangat menarik. Ya, wahana banana boat menjadi wahana
-                    paling disukai oleh para wisatawan.</p>
+                    Gili Ketapang adalah sebuah pulau kecil yang terletak di dekat pantai Probolinggo, Jawa Timur. Pulau ini terkenal dengan pantai berpasir putih dan perairan yang jernih, menjadikannya salah satu destinasi wisata favorit bagi wisatawan lokal maupun internasional. Dengan kejernihan air lautnya, Gili Ketapang menjadi tempat yang ideal untuk melakukan snorkeling. Selain itu, pengunjung juga dapat menikmati berbagai atraksi olahraga air yang seru, seperti wahana banana boat yang sangat digemari. Pulau ini menawarkan pengalaman menyenangkan dengan berbagai pilihan aktivitas yang cocok untuk segala usia. Keindahan alamnya yang masih alami juga membuat para wisatawan betah berlama-lama di sini.</p>
             </div>
         </section>
 
@@ -169,8 +155,21 @@
                     (BJBR)
                     adalah tempat wisata dengan konsep ekowisata mangrove yang
                     berada di Probolinggo, Jawa Timur. Di BJBR, Anda dapat berjalan di atas jembatan kayu yang
-                    dikelilingi oleh hutan bakau sambil menikmati keindahan alam sekitar. Selain itu, BJBR memiliki area
-                    bermain anak-anak, restoran, dan penginapan, sehingga cocok sebagai destinasi wisata untuk keluarga.
+                    dikelilingi oleh hutan bakau sambil menikmati keindahan alam sekitar. Tidak hanya hutan bakau saja yang menjadi daya tarik utama, ada pula spot lain yang tidak kalah menarik seperti outbond di pantai pasir putih buatan seluas 8000 m2 dan berbagai spot foto kekinian (instagramable) antara lain Ladang Bunga Matahari, Lorong Seribu Payung, dan Jalur Bersepeda.
+                </p>
+            </div>
+        </section>
+        <section id="wisata6" class="w-full h-auto mx-auto bg-white">
+            <div
+                class="flex flex-col mx-auto items-center w-full h-auto md:max-w-4xl md:py-6 md:px-6 md:text-lg md:items-start md:flex-row-reverse md:relative md:w-full md:gap-5 lg:w-full lg:max-w-full lg:py-10">
+                <h2
+                    class="text-2xl font-bold text-blue-600 mt-6 md:mt-0 md:absolute md:top-4 md:left-1/2 md:-translate-x-1/2 lg:text-3xl lg:top-7">
+                    6. Pantai Duta</h2>
+                <img src="images/duta.jpg" alt="BJBR"
+                    class="w-11/12 h-auto rounded-xl mt-6 md:w-1/3 md:mt-8 lg:h-auto lg:w-2/5 lg:mt-12">
+                <p
+                    class="text-xl md:text-[15px] md:leading-6 w-11/12 indent-10 text-justify mt-7 md:mt-8 mb-6 lg:text-xl lg:leading-8 lg:mt-12">
+                    Pantai Duta merupakan salah satu tempat wisata pantai populer di Probolinggo, Jawa Timur. Pantai ini banyak dikunjungi wisatawan terutama pada libur akhir pekan atau hari libur. Wisata pantai ini menawarkan pemandangan alam yang sangat eksotis berupa keindahan laut yang alami. Pasir hitam dan ombak yang tenang menjadi keunggulan dari tempat wisata yang satu ini. Kawasan wisata ini memiliki ciri khas tersendiri yaitu perpaduan antara hutan cemara dan hutan mangrove. Keberadaan hutan mangrove menjadikan suasana di sekitar pantai terasa sejuk dan sangat asri. Ditambah rimbunnya pepohonan cemara yang hijau disekitar Pantai Duta pastinya membuat liburan anda semakin berwarna.
                 </p>
             </div>
         </section>
